<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarCachorro">


  <!-- id, raca, precoMedio, indicadoCriancas  -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/titulo_cadastro_cachorro"
        android:id="@+id/tv_titulo"
        android:inputType="number"
        android:textSize="25sp"/>

<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="50dp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_titulo"-->
<!--        android:hint="@string/string_id"-->
<!--        android:id="@+id/et_id"-->
<!--        android:inputType="number"-->
<!--        android:textSize="25sp"/>-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/raca"
        android:textSize="25sp"
        android:id="@+id/et_raca"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_raca"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        android:inputType="number"
        android:hint="@string/preco_medio"
        android:id="@+id/et_preco_medio"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_preco_medio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:hint="@string/indicado_criancas"
        android:id="@+id/sw_indicado_crianca"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sw_indicado_crianca"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cadastrar_cachorro"
        android:textSize="20sp"
        android:id="@+id/bt_cadastrar_cachorro"
        android:onClick="cadastrarCachorro"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="280dp"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastrar_cachorro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
      android:id="@+id/iv_cachorro_feliz"/>

</androidx.constraintlayout.widget.ConstraintLayout>